@startuml codes-design

interface OneTimeCode {
    +getCode(): Long
    +consume()
    +consumed(): boolean
}

class OneTimeCodeImpl implements OneTimeCode

interface CodesGeneratorStrategy {
    +generateCode(\n    alreadyGeneratedPredicate: Predicate<OneTimeCode>\n):OneTimeCode
    +generateCode(\n    alreadyGenerated: Set<OneTimeCode>\n): OneTimeCode
    +generateCode(): OneTimeCode
}
CodesGeneratorStrategy .up.> OneTimeCode : creates

class SecureRandomGenerator implements CodesGeneratorStrategy

interface CodesRepository<C> {
    +get(ctx: C, electionId: String, userId: String): Optional<OneTimeCode>
    +put(ctx: C, electionId: String, userId: String, code: OneTimeCode)
    +replace(ctx: C, electionId: String, code: OneTimeCode)
}

interface CodesManager<C> {
    +generateFor(ctx: C, electionId: String, userId: String): OneTimeCode
    +isValid(ctx: C, electionId: String, code: OneTimeCode): boolean
    +invalidate(ctx: C, electionId: String, code: OneTimeCode)
    +verifyCodeOwner(ctx: C, electionId: String, userId: String, code: OneTimeCode): boolean
}

class CodesManagerImpl<C> implements CodesManager
CodesManager *-left-- OneTimeCode
CodesManagerImpl *-- CodesRepository
CodesManagerImpl *-- CodesGeneratorStrategy

@enduml